# pdf-sentinel-sandbox

./: .gitignore  Dockerfile  KNOWN_ISSUES.md  LICENSE  README.md  SECURITY.md  USAGE.md  analyzer.py  app.py  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  signatures.yara  test_analyzer.py
.github/workflows/: security.yml  sync_to_hub.yml
pdf_sentinel/: __init__.py  analyzer.py  crossref.py  patterns.py  plugins.py
tests/: test_analyzer.py  test_invisible_text.py  test_risk_score_breakdown.py  test_structural_risks.py
