[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-sentinel"
version = "1.0.0"
description = "Forensic PDF analysis library — detect prompt injection, invisible text, PII, and malicious content"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "PyPDF2==3.0.1",
    "yara-python==4.5.0",
    "sentence-transformers==2.3.1",
    "torch>=2.6.0",
    "numpy==1.26.3",
    "presidio-analyzer",
    "pdfid",
    "spacy",
    "Pillow",
    "python-magic==0.4.27",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.37.0",
    "protobuf<7,>=6.33.4",
]

[tool.setuptools.packages.find]
include = ["pdf_sentinel*"]
